# course_work_5_API_HH_SJ

./: README.md  main.py  pyproject.toml
data/: vacancies.json
source/: API.py  save_to_JSON.py  utils.py  vacancies.py
