[tool.poetry]
name = "course-work-5-api-hh-sj"
version = "0.1.0"
description = ""
authors = ["Nikita Kislykh <kislykhnik@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_5_api_hh_sj"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
